hard-gists/f85e89bef4b6e9b83f2a/run.log
=== Docker Run Log for f85e89bef4b6e9b83f2a ===
Started at: Mi 29. Okt 21:29:34 CET 2025

[2025-10-29 21:29:34] START: Running container for f85e89bef4b6e9b83f2a
[2025-10-29 21:29:34] SUCCESS: Container 7472fd2e63f84c0ee910ba001266614a1c134ca9fe7ad3c0e48f847fed3d929a started for f85e89bef4b6e9b83f2a
=== Container logs for f85e89bef4b6e9b83f2a ===
  File "/snippet.py", line 83
    print "found: %s active" % bundleIdentifier
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for f85e89bef4b6e9b83f2a ===
[2025-10-29 21:29:36] INFO: Container 7472fd2e63f84c0ee910ba001266614a1c134ca9fe7ad3c0e48f847fed3d929a has stopped
